--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/ajeet-devops.JPG" alt="Moyosore Baiye" width="80">
+          <img src="./assets/images/C7DB6251-142F-4115-8593-C77EA7615165.heic" alt="Moyosore Baiye" width="80">
         </figure>
 
         <div class="info-content">
