--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
         <section class="about-text">
           <p>
             <ul>
-              <li>I am a DevOps Engineer, Blogger, YouTuber, Educator, Mentor.</li>
-              <li>Currently working at <a style="display: inline; color: rgb(255, 208, 0);" style="display: inline;" href="https://digital.ai/continuous-testing">DigitalAi (Experitest)</a></li>
+              <li>I am a DevOps Engineer, Foodie, YouTuber, Educator, Mentor.</li>
+              <li>Currently working at <a style="display: inline; color: rgb(255, 208, 0);" style="display: inline;" href="https://www.octosoft.ai">Octosoft Technologies Limited</a></li>
               <li>Previously worked at <a style="display: inline; color: rgb(255, 208, 0);" href="https://webengage.com">WebEngage</a> & Ample</li>
               <li>Mobann Technologies Instructor</li>
               <li>CKA Certified (Certified Kubernetes Administrator)
@@ -278,7 +278,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Instructor on Mobann Technologies Limited</h4>
+                <h4 class="h4 service-item-title">Instructor at Mobann Technologies Limited</h4>
 
                 <p class="service-item-text">
                   You can find courses by me on Udemy.
